--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "task-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "npx ts-node index.ts",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +17,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
 }
