--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.2.3",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
+    "prisma": "^4.14.1",
     "typescript": "^5.0.4"
   }
 }
